--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
-    "build": "quasar build && cp dist/spa/index.html dist/spa/404.html",
+    "build": "quasar build",
     "postinstall": "quasar prepare"
   },
   "dependencies": {
